--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="descriptions" content="A simple JSON to Python dictionary converter online. It uses the Python JSON Standard Library.">
+        <meta name="keywords" content="JSON parser, JSON deseialize, JSON marshal,  marshalling, python, python dictionary, python converter, flask app">
+        <meta name="author" content="Federico Baú, fredbau91@gmail.com" />
+        <meta name="copyright" content="Copyright owner" />
         <link rel="stylesheet" href="../static/main.css">
         <!-- Code Mirror CSS -->    
         <!-- <link rel="stylesheet" href="../static/codemirror/lib/codemirror.css">
